--- a/images/nginx/supervisord.conf
+++ b/images/nginx/supervisord.conf
@@ -1,1 +1,12 @@
-supervisord.conf
+[supervisord]
+nodaemon=true
+
+[program:nginx]
+command = /usr/sbin/nginx
+user = root
+autostart = true
+
+[program:php5-fpm]
+command = /usr/sbin/php5-fpm
+user = root
+autostart = true
